# DocProcessor

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  pyproject.toml
backend/: main.py
backend/inputdatasample/: generate_sample.py  generate_samples.py
backend/models/: schemas.py
backend/processing/: annotator.py  pipeline.py  prompts.py  renderer.py  textract.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  store.ts  types.ts
frontend/src/components/: PageViewer.tsx  PasswordGate.tsx  SummaryPanel.tsx  UploadSection.tsx
